--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
         <!-- Left Image -->
         <div class="left-image">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          <img src="/Loginimg.png"
                width="450" class="img-fluid" alt="Sample image" />
         </div>
 
