--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="left-image">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" width="450"
+          <img src="/Loginimg.png" width="450"
             class="img-fluid" alt="Sample image" />
         </div>
 
