--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -17,19 +17,23 @@ body {
   align-items: center;
   flex-wrap: wrap;
   max-width: 1000px;
-  background: #ffffff;
+  /* background: #ffffff; */
   padding: 40px 20px;
   border-radius: 16px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
   margin: 50px auto;
   position: relative;
+  box-shadow: 0 6px 40px 0 rgba(0,0,0,0.10);
+  background: rgba(255, 255, 255, 0.244);
+  backdrop-filter: blur(16px) saturate(120%);
 }
 
 .left-image {
   flex: 1;
   text-align: center;
-  padding: 20px;
-  
+  padding: 20px; 
+  margin-left: 20px;
+ 
 }
 
 .right-text {
@@ -42,7 +46,7 @@ body {
   font-size: 22px;
   margin-bottom: 20px;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
 }
 
 form {
@@ -121,7 +125,7 @@ button:hover {
   display: block;
   margin-top: 8px;
   font-size: 14px;
-  color: #007bff;
+  color: #ffffff;
   text-align: right;
   cursor: pointer;
 }
@@ -215,6 +219,6 @@ button:hover {
 .form-outline label {
   font-weight: 500;
   margin-bottom: 6px;
-  color: #333;
+  color: #ffffff;
   font-size: 14px;
 }
