--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -17,18 +17,22 @@ body {
   align-items: center;
   flex-wrap: wrap;
   max-width: 1000px;
-  background: #ffffff;
+  /* background: #ffffff; */
   padding: 40px 20px;
   border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+  /* box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15); */
   margin: 50px auto;
   position: relative;
+  box-shadow: 0 6px 40px 0 rgba(0,0,0,0.10);
+  background: rgba(255, 255, 255, 0.244);
+  backdrop-filter: blur(16px) saturate(120%);
 }
 
 .left-image {
   flex: 1;
   text-align: center;
-  padding: 20px;
+  padding: 20px; 
+  margin-left: 20px;
 }
 
 .right-text {
@@ -41,7 +45,7 @@ body {
   font-size: 22px;
   margin-bottom: 20px;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
 }
 
 form {
@@ -201,6 +205,6 @@ button:hover {
 .form-outline label {
   font-weight: 500;
   margin-bottom: 6px;
-  color: #333;
+  color: #ffffff;
   font-size: 14px;
 }
