--- a/src/student/dashboard/student-dashboard.component.css
+++ b/src/student/dashboard/student-dashboard.component.css
@@ -2,7 +2,7 @@
     min-height: 100vh;
     padding: 40px;
     font-family: 'Segoe UI', sans-serif;
-    background: #f7f9fc;
+    background: #f7f9fc00;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,14 +11,15 @@
   h1 {
     font-size: 32px;
     margin-bottom: 20px;
+    color: white;
   }
   
   .tip-box {
-    background: #fffbea;
+    background: #fffbea77;
     padding: 15px 25px;
     border-radius: 8px;
     font-size: 16px;
-    color: #6a5d00;
+    color: #ffe203;
     margin-bottom: 30px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   }
@@ -61,7 +62,7 @@
     border: none;
     border-radius: 8px;
     font-size: 16px;
-    background-color: #4a90e2;
+    background-color: #d73ce3;
     color: white;
     cursor: pointer;
     transition: background 0.3s ease;
